Fix revokeEvents to reliably revoke them.  Bug 284389, r=darin, sr=dbaron, a=asa